--- a/_posts/2020-05-18-PaaS.md
+++ b/_posts/2020-05-18-PaaS.md
@@ -35,9 +35,19 @@ tags: featured
   * [Platform9](https://platform9.com/) - Managed Kubernetes service designed for developers. Free developer accounts come with up to 3 clusters & 20 nodes cluster.
   * [fly.io](https://fly.io/) - Fly is a platform for applications that need to run globally. It runs your code close to users and scales compute in cities where your app is busiest. Write your code, package it into a Docker image, deploy it to Fly's platform and let that do all the work to keep your app snappy. Free for side projects, $10/mo of service credit that automatically applies to any paid service. And if you ran really small virtual machines, credits will go a long way.
 
-If you wish to add more to this this post please let us know and we would cosider adding it here.
+## Docker Related
 
-Note: Providers may change plans with or without notice please read the term and service before subscribing to the services and use policy. We are not affilated to any company mentioned above nor this is a promotinal post but when you wish to try out something we hope this would help you.
+  * [canister.io](https://canister.io/) — 20 free private repositories for developers, 30 free private repositories for teams to build and store Docker images
+  * [Docker Hub](https://hub.docker.com) — One free private repository and unlimited public repositories to build and store Docker images
+  * [Gitlab](https://gitlab.com) - Per-repo container registry.  10GB limit.
+  * [Play with Docker](https://labs.play-with-docker.com/) — A simple, interactive and fun playground to learn Docker.
+  * [quay.io](https://quay.io/) — Build and store container images with unlimited free public repositories
+  * [Whales](https://github.com/Gueils/whales) — A tool to automatically dockerize your applications for free.
+
+## Vagrant Related
+
+  * [app.vagrantup.com](https://app.vagrantup.com) - HashiCorp Vagrant Cloud. Vagrant box hosting.
+  * [vagrantbox.es](https://www.vagrantbox.es/) — An alternative public box index
 
 If you wish to add more to this this post please let us know and we would cosider adding it here.
 
