Update and rename 2020-06-11-Flutter to 2020-06-11-Flutter.md

--- a/_posts/2020-06-11-Flutter.md
+++ b/_posts/2020-06-11-Flutter.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: Computer Engineering
+title: Flutter
 author: Sangram
-categories: [ Engineering, tutorial ]
+categories: [ Computer Science, App Development ]
 image: assets/images/1.jpg
 ---
 
